# sudoku

./: .gitignore  LICENSE  PROMPTS.md  README.md  pyproject.toml
docs/: code-execution-flow.md  project-notes.md
scripts/: timeit_benchmark.py
src/sudoku/: game.py  grid.py  seeder.py  tui.py
tests/: test_game.py  test_grid.py  test_seeder.py
