[project]
name = "sudoku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Glines", email = "aglines@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
]

[project.scripts]
sudoku = "sudoku:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
