[project]
name = "sudoku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Glines", email = "aglines@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "rich>=13.0.0",
    "keyboard>=0.13.5",
    "getch>=1.0",
    "readchar>=4.2.1",
    "pytest>=8.4.2",
]

[project.scripts]
sudoku = "sudoku.tui:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
